# PTT-Auto-Sign

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_zh-TW.md  config.py  main.py  monkey_patch.py  pttautosign.py  pyproject.toml  pyptt_patch.py  random_cron.sh  run_script.sh
.cursor/rules/: configuration-guide.mdc  development-workflow.mdc  docker-deployment.mdc  project-structure.mdc  python-coding-standards.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml  release.yml
docker/: Dockerfile
scripts/: docker_runner.sh  ptt_manager.sh  random_cron.sh  run_script.sh  simple_runner.sh
scripts/docker/: random_cron.sh
src/pttautosign/: __init__.py  main.py
src/pttautosign/docker/: Dockerfile  entrypoint.sh
src/pttautosign/patches/: __init__.py  fake_telnetlib3.py  monkey_patch.py  pyptt_patch.py
src/pttautosign/scripts/: run_script.sh
src/pttautosign/utils/: __init__.py  app_context.py  config.py  factory.py  interfaces.py  logger.py  main.py  ptt.py  telegram.py
tests/: __init__.py  conftest.py  test_app_context.py  test_config.py  test_factory.py  test_logger.py  test_main.py  test_patches.py  test_ptt.py  test_telegram.py
utils/: __init__.py  app_context.py  factory.py  interfaces.py  logger.py  ptt.py  telegram.py
