[tool.poetry]
name = "pttautosign"
version = "1.2.0"
description = "PTT Auto Sign - Automatically sign in to PTT BBS"
authors = ["CrazyCat <crazycat836@gmail.com>"]
readme = "README.md"
packages = [{include = "pttautosign", from = "src"}]
license = "MIT"
repository = "https://github.com/crazycat836/PTTAutoSign"
documentation = "https://github.com/crazycat836/PTTAutoSign/blob/main/README.md"
keywords = ["ptt", "bbs", "automation", "sign-in"]

[tool.poetry.dependencies]
python = "^3.11"
pyptt = "^1.0.6"
python-dotenv = "^1.0.0"
click = "^8.1.7"
docker = "^7.0.0"
python-crontab = "^3.0.0"
requests = "^2.31.0"
setuptools = "^78.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pttautosign = "pttautosign.main:main"

[tool.pytest.ini_options]
addopts = "--no-bytecode --cov=. --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
