[tool.poetry]
name = "pttautosign"
version = "1.3.1"
description = "PTT Auto Sign - Automatically sign in to PTT BBS"
authors = ["CrazyCat <crazycat836@gmail.com>"]
readme = "README.md"
packages = [{include = "pttautosign", from = "src"}]
license = "Apache-2.0"
repository = "https://github.com/crazycat836/PTTAutoSign"
documentation = "https://github.com/crazycat836/PTTAutoSign/blob/main/README.md"
keywords = ["ptt", "bbs", "automation", "sign-in"]

[tool.poetry.dependencies]
python = "^3.11"
pyptt = "^1.0.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
setuptools = "^78.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pttautosign = "pttautosign.main:main"
